--- a/app/views/indie_spaces/index.html.slim
+++ b/app/views/indie_spaces/index.html.slim
@@ -10,3 +10,29 @@
         - @sliders.each do |slider|
           li
             = image_tag slider.image_url(:large)
+
+section#blog-area.blog-grid-area
+  .container
+    .row
+      .col-lg-12.col-md-12.col-sm-12.col-xs-12
+        .blog-post
+          - @games.in_groups_of(3) do |group|
+            .row
+              - group.compact.each do |game|
+                / LOOP
+                .col-md-4.col-sm-12
+                  .single-blog-item
+                    .img-holder
+                      = image_tag game.thumbnail_url(:thumb)
+                    .text-holder
+                      ul.meta-info
+                        li
+                          .virtual-link
+                            i class="fa fa-users" aria-hidden="true"
+                            | #{game.team}
+                        li
+                          a[href="#"]
+                            i class="fa fa-video-camera" aria-hidden="true"
+                            | #{t('.view_video')}
+                      h3.blog-title = game.name
+                      p = sanitize game.description
