Add link to game, Closed #141

--- a/app/views/admin/games/_form.html.slim
+++ b/app/views/admin/games/_form.html.slim
@@ -4,6 +4,7 @@
       = f.input :name, as: :string
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
       = f.input :team, as: :string
+      = f.input :website
       = f.input :video
       = f.input :thumbnail do
         = f.input_field :thumbnail
