--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,3 +188,40 @@ body {
     i { padding-right: 7px; }
   }
 }
+
+.schedule-tabs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
+
+  .tab{
+    border-top: 1px solid #ededed;
+    border-right: 1px solid #ededed;
+    border-bottom: 1px solid #ededed;
+    cursor: pointer;
+    background: #f7f7f7;
+    color: #202020;
+    margin: 0;
+    line-height: 20px;
+    text-align: center;
+    padding: 15px 40px;
+    font-family: 'Roboto', sans-serif;
+    transition: all 0.5s ease 0s;
+
+    .date {
+      color: #ea531c;
+      line-height: 3rem;
+    }
+    .date-long-format {
+      color: #8a8a8a;
+      font-weight: 400;
+    }
+    &:first-child { border-left: 1px solid #ededed; }
+
+    &:hover, &.active{
+      background: #f28a03;
+      color: white;
+      h3, .date, .date-long-format{ color: white }
+    }
+  }
+}
