--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -193,20 +193,21 @@ body {
   display: flex;
   justify-content: center;
   margin-bottom: 4rem;
+  $schedule-tab-background: #ededed;
 
-  .tab{
-    border-top: 1px solid #ededed;
-    border-right: 1px solid #ededed;
-    border-bottom: 1px solid #ededed;
-    cursor: pointer;
+  .tab {
     background: #f7f7f7;
+    border-top: 1px solid $schedule-tab-background;
+    border-right: 1px solid $schedule-tab-background;
+    border-bottom: 1px solid $schedule-tab-background;
+    cursor: pointer;
     color: #202020;
     margin: 0;
     line-height: 20px;
     text-align: center;
     padding: 15px 40px;
     font-family: 'Roboto', sans-serif;
-    transition: all 0.5s ease 0s;
+    transition: all .5s ease 0s;
 
     .date {
       color: #ea531c;
@@ -216,12 +217,12 @@ body {
       color: #8a8a8a;
       font-weight: 400;
     }
-    &:first-child { border-left: 1px solid #ededed; }
+    &:first-child { border-left: 1px solid $schedule-tab-background; }
 
-    &:hover, &.active{
+    &:hover, &.active {
       background: #f28a03;
       color: white;
-      h3, .date, .date-long-format{ color: white }
+      h3, .date, .date-long-format{ color: white; }
     }
   }
 }
