--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,3 +188,11 @@ body {
     i { padding-right: 7px; }
   }
 }
+
+.sponsor.single-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  box-shadow: 2px 2px 5px 0px #E0E0E0;
+}
