--- a/app/views/pages/index/_partner.html.slim
+++ b/app/views/pages/index/_partner.html.slim
@@ -8,15 +8,9 @@ section.brand-area
     .row
       .col-md-12
         .brand-tab-box
-          ul.nav.nav-tabs.tab-menu
-            - @partner_types.each.with_index do |type, index|
-              li[class="#{index == 0 ? 'active' : ''}"] = link_to type.name, "#partner-type-#{type.id}", data: { toggle: 'tab' }
           .tab-content
-            - @partner_types.each.with_index do |type, index|
-              div.tab-pane[id="partner-type-#{type.id}" class="#{index == 0 ? 'active' : ''}"]
-                - type.partners.in_groups_of(4) do |group|
-                  .row
-                    - group.compact.each do |partner|
-                      .col-md-3.col-sm-6.col-xs-12
-                        .single-item
-                          = link_to image_tag(partner.logo_url(:v1)), partner.url, target: '_blank'
+            .row
+              - @partners.each do | partner |
+                .col-md-2.col-sm-4.col-xs-12
+                  .card.sponsor.single-item
+                      = link_to image_tag(partner.logo_url(:v1), class: 'img-responive'), partner.url, target: '_blank'
