--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -243,7 +243,7 @@ body {
   }
 }
 
-.single-speaker-area .bottom-content .schedule {
+.agendas .bottom-content .schedule {
   display: none;
   overflow: hidden;
   &.active{ display: block; }
