--- a/app/views/agendas/show.html.slim
+++ b/app/views/agendas/show.html.slim
@@ -2,7 +2,7 @@
 - # TODO: Add banner config
 - breadcrumb :agenda
 
-section.single-speaker-area.schedule-list-area
+section.agendas.single-speaker-area.schedule-list-area
   .container
     .schedule-tabs
       - @days.each do |day|
