--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,9 +165,11 @@ body {
 
 .single-speaker-area .bottom-content .schedule .schedule-single .inner-content .left .time {
   width: auto;
+  min-width: 14em;
   white-space: nowrap;
   align-self: center;
   padding-right: 20px;
+
   @media screen and (max-width: 576px){
     display: block;
     width: 100%;
