Closed #179, setup alternate hreflang

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html
     title = page_title
     meta[name="viewport" content="width=device-width, initial-scale=1"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge"]
+    = alternate_langs
     = csrf_meta_tags
 
     = stylesheet_link_tag    'https://use.fontawesome.com/b2e3e84e95.css', media: 'all'
