--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.bg-dark.sticky-top
+nav.navbar.navbar-expand-lg.bg-white.sticky-top
   .container
     / Brand
     = link_to root_path, class: 'navbar-brand'
