Renew breadcrumb style

--- a/app/views/shared/_breadcrumb.html.slim
+++ b/app/views/shared/_breadcrumb.html.slim
@@ -1,19 +1,14 @@
 - breadcrumbs.tap do |links|
   - if links.any?
-    section.breadcrumb-bottom-area
+    nav#breadcrumb
       .container
         .row
           .col-md-12
-            .breadcrumb-bottom
-              .left.pull-left
-                / TODO: Refactor after renew theme
-                ul
-                  - links.each_with_index do |link, index|
-                    li[class="#{link.current? ? "active" : nil}"]
-                      - if link.current?
-                        = link.text
-                      - else
-                        = link_to link.text, link.url
-                    - unless index + 1 == links.size
-                      li
-                        i.fa.fa-angle-right
+            / TODO: Refactor after renew theme
+            ol.breadcrumb.bg-transparent
+              - links.each_with_index do |link, index|
+                li[class="#{link.current? ? "breadcrumb-item active" : "breadcrumb-item"}"]
+                  - if link.current?
+                    = link.text
+                  - else
+                    = link_to link.text, link.url
