Adjust price-box style

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,2 +1,5 @@
-$font-family-base: 'Noto Sans TC', sans-serif;
-$font-family-alt:  'Noto Sans TC', sans-serif;
+$font-family-sans-serif: 'Khula', 'Noto Sans TC', -apple-system, sans-serif;
+// $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+
+$pink: #E94867;
+$dark: #212529; // $gary-900
