--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,13 @@
 @import "variables";
 @import "bootstrap";
+
+// Base
+@import "base";
+
+// Module
+@import "modules/text";
+@import "modules/colors";
+@import "modules/price";
+
+// Layout
+@import "layout/navbar";
