--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
     = stylesheet_link_tag    'https://use.fontawesome.com/b2e3e84e95.css', media: 'all'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Noto+Sans+TC'
+    = stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Khula:400,600,800'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag    'application', 'data-turbolinks-track': 'reload'
   body
