Refresh index sections

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,7 @@
-$font-family-sans-serif: 'Khula', 'Noto Sans TC', -apple-system, sans-serif;
-// $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+// Fonts
+$font-family-sans-serif: 'Noto Sans TC', -apple-system, sans-serif;
+$headings-font-weight: 800;
 
-$pink: #E94867;
+// Colors
+$pink: #FF3366;
 $dark: #212529; // $gary-900
