--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
 @import "modules/text";
 @import "modules/colors";
 @import "modules/price";
+@import "modules/section";
+@import "modules/news";
 
 // Layout
 @import "layout/navbar";
+@import "layout/about";
