--- a/app/views/pages/index/_ticket.html.slim
+++ b/app/views/pages/index/_ticket.html.slim
@@ -1,7 +1,7 @@
 section#ticket-section.mb-5
   .container
-    .sec-title.text-center
-      h1 = t('.get_tickets')
+    .sec-title.text-center.mb-4
+      h1.heading = sanitize t('.heading')
   .bg-pink.text-white.py-5
     .container
       .row.flex-wrap.justify-content-between
