--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,9 +1,4 @@
-section.footer-bottom-area
-    .container
-      .row
-        .col-lg-8.col-md-7.col-sm-12.col-xs-12
-          .copyright-text
-            Copyrights © 2018 All Rights Reserved, Powered by #{t('site_name')}
-        .col-lg-4.col-md-5.col-sm-12.col-xs-12
-          .footer-menu
-            = nav_item t('shared.nav.home'), root_path
+footer#footer
+  .container.mt-5.mb-3
+    .col.copyright-text.text-center.text-black-50
+      Copyrights © 2018 All Rights Reserved, Powered by #{t('site_name')}
