--- a/app/views/admin/options/edit.html.slim
+++ b/app/views/admin/options/edit.html.slim
@@ -15,5 +15,8 @@
             = f.input :ticket_student_price, as: :integer
             = f.input :ticket_early_bird_due_to, as: :date
             = f.input :ticket_buy_link
+            = f.input :cfp_only_mode, collection: [['No', false], ['Yes', true]], as: :select, include_blank: false
+            = f.input :cfp_form_url
+            = f.input :cfp_description, as: :text, input_html: { data: { editor: true }, rows: 20 }
           = admin_box_footer do
             = f.submit class: 'btn btn-primary'
