--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,16 +1,26 @@
-.main-slider
-  #rev_slider_one_wrapper.rev_slider_wrapper.fullwidthbanner-container[data-source="gallery"]
-    #rev_slider_one.rev_slider.fullwidthabanner[data-version="5.4.1"]
-      ul
-        / TODO: User render collection or empty style
-        - if @sliders.empty?
-          li
-            = image_tag 'sliders/slide_1.jpg'
-        - @sliders.each do |slider|
-          li
-            = image_tag slider.image_url(:large)
-= render 'pages/index/about'
-/ TODO: Refactor - show ticket information only per-year sites
-= render 'pages/index/ticket' unless current_site.new_record?
-= render 'pages/index/partner' if @partners_and_sponsors.any?
-= render 'pages/index/news'
+- if cfp_only?
+  section.sec-pding
+    .container
+      .row
+        .col-md-12
+          = sanitize current_site.cfp_description
+      .row
+        .col-md-12
+          = javascript_include_tag current_site.cfp_form_url, 'data-turbolinks-track': 'reload'
+- else
+  .main-slider
+    #rev_slider_one_wrapper.rev_slider_wrapper.fullwidthbanner-container[data-source="gallery"]
+      #rev_slider_one.rev_slider.fullwidthabanner[data-version="5.4.1"]
+        ul
+          / TODO: User render collection or empty style
+          - if @sliders.empty?
+            li
+              = image_tag 'sliders/slide_1.jpg'
+          - @sliders.each do |slider|
+            li
+              = image_tag slider.image_url(:large)
+  = render 'pages/index/about'
+  / TODO: Refactor - show ticket information only per-year sites
+  = render 'pages/index/ticket' unless current_site.new_record?
+  = render 'pages/index/partner' if @partners_and_sponsors.any?
+  = render 'pages/index/news'
