Implement partner section in homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "modules/price";
 @import "modules/section";
 @import "modules/news";
+@import "modules/partner";
 
 // Layout
 @import "layout/navbar";
