--- a/app/views/pages/index/_partner.html.slim
+++ b/app/views/pages/index/_partner.html.slim
@@ -1,16 +1,10 @@
-section.brand-area
+section#partners
   .container
-    .sec-title
-      .underlay
-        h2 = t('.partner')
-      h1 = t('.partner')
-    / TODO: Rewirte below
-    .row
-      .col-md-12
-        .brand-tab-box
-          .tab-content
-            .row
-              - @partners_and_sponsors.each do | partner |
-                .col-md-2.col-sm-4.col-xs-12
-                  .card.sponsor.single-item
-                    = link_to image_tag(partner.logo_url(:v1), class: 'img-responive'), partner.url, target: '_blank'
+    .sec-title.text-center.mb-4
+      h1.heading = sanitize t('.heading')
+    .partners
+      .row
+        - @partners_and_sponsors.each do |partner|
+          .col-md-2.col-sm-4.col-xs-12
+            .card.partner
+              = link_to image_tag(partner.logo_url(:v1)), partner.url, target: '_blank'
