--- a/app/views/news/index.html.slim
+++ b/app/views/news/index.html.slim
@@ -2,9 +2,7 @@
 - breadcrumb :news_index
 / TODO: Set page banner
 
-section#blog-area.blog-modern-area
-    .container
-      .row
-        .col-lg-12.col-md-12.col-sm-12.col-xs-12
-          .blog-post
-           = render @news
+section#news.mb-5
+  .container
+    .row
+       = render @news
