--- a/app/views/pages/index/_news.html.slim
+++ b/app/views/pages/index/_news.html.slim
@@ -3,7 +3,7 @@ section#news.mb-5
     .sec-title.text-center.mb-4
       h1.heading = sanitize t('.heading')
     - @news.each do |news|
-      article.news
+      article.news.mb-5.pb-5.with-border
         .row
           .col-md-6
             .news__picture
@@ -15,7 +15,7 @@ section#news.mb-5
           .col-md-6
             .news__container.mx-2
               = link_to news do
-                h1.news__title = news.title
+                h3.news__title = news.title
               hr.news__separator
               .news__body
                 = sanitize truncate(news.content, length: 150, escape: false)
