Implement sponsor theme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "modules/section";
 @import "modules/news";
 @import "modules/partner";
+@import "modules/sponsor";
 
 // Layout
 @import "layout/navbar";
