--- a/app/views/sponsors/index.html.slim
+++ b/app/views/sponsors/index.html.slim
@@ -2,7 +2,7 @@
 - breadcrumb :sponsors
 / TODO: Set page banner
 
-section.brand-area.sponsors
+section#sponsors.sponsors
   .container
     = render partial: 'group', collection: @sponsor_levels, locals: { item_name: :sponsors }
     = render partial: 'group', collection: @partner_types, locals: { item_name: :partners }
