Add speaker theme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "modules/news";
 @import "modules/partner";
 @import "modules/sponsor";
+@import "modules/speaker";
 
 // Layout
 @import "layout/navbar";
