Add colspan display support for agenda

--- a/app/views/admin/agenda_times/_form.html.slim
+++ b/app/views/admin/agenda_times/_form.html.slim
@@ -3,5 +3,6 @@
     = f.input :label, as: :string
     = f.association :day
     = f.input :order
+    = f.input :single, as: :boolean
   = admin_box_footer do
     = f.submit class: 'btn btn-primary'
