--- a/app/views/indie_spaces/index.html.slim
+++ b/app/views/indie_spaces/index.html.slim
@@ -1,25 +1,22 @@
 - content_for :disable_breadcrumb, true
 = render 'slider'
-section#blog-area.blog-grid-area
-  .container
-    .row
-      .col-lg-12.col-md-12.col-sm-12.col-xs-12
-        .blog-post
-          - @games.in_groups_of(3) do |group|
-            .row
-              - group.compact.each do |game|
-                / LOOP
-                .col-md-4.col-sm-12
-                  .single-blog-item
-                    .img-holder
-                      = link_to_if game.website.present?, image_tag(game.thumbnail_url(:thumb)), game.website, target: '_blank'
-                    .text-holder
-                      ul.meta-info
-                        li
-                          = link_to_if game.website.present?, label_with_icon(game.team, 'users'), game.website, target: '_blank' do
-                            .virtual-link = label_with_icon(game.team, 'users')
-                        li
-                          = link_to_if game.video.present?, label_with_icon(t('.view_video'), 'video-camera'), game.video, target: '_blank' do
-                            .virtual-link = label_with_icon(t('.view_video'), 'video-camera')
-                      h3.blog-title = game.name
-                      p = sanitize game.description
+
+section#indie-space
+  .container.mt-5.mb-4
+    .row.flex-warp.justify-content-between
+      - @games.each do |game|
+        .align-self-stretch.d-flex.mb-3.col-md-4.col-sm-12
+          article.card.indie-game
+            .indie-game__picture
+              = link_to_if game.website.present?, image_tag(game.thumbnail_url(:thumb), class: 'card-img-top'), game.website, target: '_blank'
+            .card-body.indie-game__body
+              header.indie-game__header
+                .d-flex.indie-game__metadata.mb-3
+                  .indie-game__team.mr-4
+                    = link_to_if game.website.present?, label_with_icon(game.team, 'users'), game.website, target: '_blank' do
+                      .virtual-link = label_with_icon(game.team, 'users')
+                  .indie-game__video
+                    = link_to_if game.video.present?, label_with_icon(t('.view_video'), 'video-camera'), game.video, target: '_blank' do
+                      .virtual-link = label_with_icon(t('.view_video'), 'video-camera')
+                h3.indie-game__name.text-pink = game.name
+              .indie-game__description = sanitize game.description
