--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "modules/partner";
 @import "modules/sponsor";
 @import "modules/speaker";
+@import "modules/session";
 
 // Layout
 @import "layout/navbar";
