--- a/app/views/admin/agendas/_form.html.slim
+++ b/app/views/admin/agendas/_form.html.slim
@@ -6,5 +6,6 @@
       = f.association :speakers, input_html: { class: 'select2' }
       = f.association :room
       = f.association :time
+      = f.association :tags, input_html: { class: 'select2' }
     = admin_box_footer do
       = f.submit class: 'btn btn-primary'
