--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -10,3 +10,8 @@ a {
 .breadcrumb-item {
   text-transform: uppercase;
 }
+
+.badge-pink {
+  color: var(--white);
+  background-color: var(--pink);
+}
