--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -39,6 +39,8 @@ aside.main-sidebar
           = admin_sidebar_item t('.new_day'), new_admin_agenda_day_path, icon: 'plus'
           = admin_sidebar_item t('.times'), admin_agenda_times_path, icon: 'clock-o'
           = admin_sidebar_item t('.new_time'), new_admin_agenda_time_path, icon: 'plus'
+          = admin_sidebar_item t('.tags'), admin_agenda_tags_path, icon: 'tags'
+          = admin_sidebar_item t('.new_tag'), new_admin_agenda_tag_path, icon: 'plus'
         = admin_sidebar_treeview t('.indie_space'), icon: 'gamepad' do
           = admin_sidebar_item t('.list'), admin_games_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_game_path, icon: 'plus'
