Closed #189, Adjust display for speaker, sponsor

--- a/app/views/indie_spaces/index.html.slim
+++ b/app/views/indie_spaces/index.html.slim
@@ -3,7 +3,7 @@
 
 section#indie-space
   .container.mt-5.mb-4
-    .row.flex-warp.justify-content-between
+    .row.flex-warp
       - @games.each do |game|
         .align-self-stretch.d-flex.mb-3.col-md-4.col-sm-12
           article.card.indie-game
