--- a/app/views/admin/options/edit.html.slim
+++ b/app/views/admin/options/edit.html.slim
@@ -16,7 +16,10 @@
             = f.input :ticket_early_bird_due_to, as: :date
             = f.input :ticket_buy_link
             = f.input :cfp_only_mode, collection: [['No', false], ['Yes', true]], as: :select, include_blank: false
+            = f.input :cfp_on_agenda_mode, collection: [['No', false], ['Yes', true]], as: :select, include_blank: false
             = f.input :cfp_form_url
             = f.input :cfp_description, as: :text, input_html: { data: { editor: true }, rows: 20 }
+            = f.input :indie_space_apply_mode, collection: [['No', false], ['Yes', true]], as: :select, include_blank: false
+            = f.input :indie_space_form_url
           = admin_box_footer do
             = f.submit class: 'btn btn-primary'
