--- a/app/views/agendas/show.html.slim
+++ b/app/views/agendas/show.html.slim
@@ -2,7 +2,17 @@
 - # TODO: Add banner config
 - breadcrumb :agenda
 
-section#agenda
+- if current_site.cfp_on_agenda_mode == 'true'
+  section.sec-pding
+    .container
+      .row
+        .col-md-12
+          = sanitize current_site.cfp_description
+      .row
+        .col-md-12
+          iframe#JotFormIFrame src="#{current_site.cfp_form_url}" allowtransparency="true" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"
+- else
+  section#agenda
   - @days.each do |day|
     .agenda.container.mt-5.mb-4.table-responsive
         h2.agenda__label.text-center.mb-4 = day.name
