--- a/app/views/indie_spaces/index.html.slim
+++ b/app/views/indie_spaces/index.html.slim
@@ -1,22 +1,29 @@
 - content_for :disable_breadcrumb, true
 = render 'slider'
 
-section#indie-space
-  .container.mt-5.mb-4
-    .row.flex-warp
-      - @games.each do |game|
-        .align-self-stretch.d-flex.mb-3.col-md-4.col-sm-12
-          article.card.indie-game
-            .indie-game__picture
-              = link_to_if game.website.present?, image_tag(game.thumbnail_url(:thumb), class: 'card-img-top'), game.website, target: '_blank'
-            .card-body.indie-game__body
-              header.indie-game__header
-                .d-flex.indie-game__metadata.mb-3
-                  .indie-game__team.mr-4
-                    = link_to_if game.website.present?, label_with_icon(game.team, 'users'), game.website, target: '_blank' do
-                      .virtual-link = label_with_icon(game.team, 'users')
-                  .indie-game__video
-                    = link_to_if game.video.present?, label_with_icon(t('.view_video'), 'video-camera'), game.video, target: '_blank' do
-                      .virtual-link = label_with_icon(t('.view_video'), 'video-camera')
-                h3.indie-game__name.text-pink = game.name
-              .indie-game__description = sanitize game.description
+- if current_site.indie_space_apply_mode == 'true'
+  section.sec-pding
+    .container
+      .row
+        .col-md-12
+          iframe#JotFormIFrame src="#{current_site.indie_space_form_url}" allowtransparency="true" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"
+- else
+  section#indie-space
+    .container.mt-5.mb-4
+      .row.flex-warp
+        - @games.each do |game|
+          .align-self-stretch.d-flex.mb-3.col-md-4.col-sm-12
+            article.card.indie-game
+              .indie-game__picture
+                = link_to_if game.website.present?, image_tag(game.thumbnail_url(:thumb), class: 'card-img-top'), game.website, target: '_blank'
+              .card-body.indie-game__body
+                header.indie-game__header
+                  .d-flex.indie-game__metadata.mb-3
+                    .indie-game__team.mr-4
+                      = link_to_if game.website.present?, label_with_icon(game.team, 'users'), game.website, target: '_blank' do
+                        .virtual-link = label_with_icon(game.team, 'users')
+                    .indie-game__video
+                      = link_to_if game.video.present?, label_with_icon(t('.view_video'), 'video-camera'), game.video, target: '_blank' do
+                        .virtual-link = label_with_icon(t('.view_video'), 'video-camera')
+                  h3.indie-game__name.text-pink = game.name
+                .indie-game__description = sanitize game.description
