--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -6,7 +6,7 @@
           = sanitize current_site.cfp_description
       .row
         .col-md-12
-          = javascript_include_tag current_site.cfp_form_url, 'data-turbolinks-track': 'reload'
+          iframe#JotFormIFrame src="#{current_site.cfp_form_url}" allowtransparency="true" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"
 - else
   = render 'pages/index/slider'
   = render 'pages/index/about'
