--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "modules/sponsor";
 @import "modules/speaker";
 @import "modules/session";
+@import "modules/button";
 
 // Layout
 @import "layout/navbar";
