--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -13,7 +13,10 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.sticky-top
           = nav_item t('.home'), root_path
           = nav_item t('.news'), news_index_path
           = nav_item t('.speakers'), speakers_path
-          = nav_item t('.agenda'), agenda_path
+          - if current_site.cfp_on_agenda_mode == 'true'
+            = nav_item t('.cfp'), agenda_path
+          - else
+            = nav_item t('.agenda'), agenda_path
           = nav_item t('.sponsors'), sponsors_path
           = nav_item t('.indie_spaces'), indie_spaces_path
       ul.navbar-nav.ml-auto
