--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -7,3 +7,14 @@
     }
   }
 }
+
+
+.navbar-light {
+  .navbar-nav {
+    .active {
+      .nav-link {
+        color: var(--pink);
+      }
+    }
+  }
+}
