--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,13 +1,11 @@
-nav#main-menu.navbar.navbar-expand-lg.bg-white.sticky-top
+nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
   .container-fluid
     / Brand
     = link_to root_path, class: 'navbar-brand'
       = image_tag current_site.logo_url
-    button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"
-      span.navbar-toggler-bar.navbar-kebab
-      span.navbar-toggler-bar.navbar-kebab
-      span.navbar-toggler-bar.navbar-kebab
-    .collapse#navbarNav.navbar-collapse
+    button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation"
+      span.navbar-toggler-icon
+    .collapse#navbar-items.navbar-collapse
       - unless cfp_only?
         ul.navbar-nav.is-uppercase
           = nav_item t('.home'), root_path
