--- a/app/views/pages/index/_news.html.slim
+++ b/app/views/pages/index/_news.html.slim
@@ -5,14 +5,14 @@ section#news.mb-5
     - @news.each do |news|
       article.news.mb-5.pb-5.with-border
         .row
-          .col-md-6
+          .col-sm-12.col-md-6.my-2
             .news__picture
               = image_tag news.thumbnail_url(:thumb)
               .news__date.text-center.py-2.px-3
                 | #{news.created_at.day}
                 br
                 | #{news.created_at.strftime('%b')}
-          .col-md-6
+          .col-sm-12.col-md-6.my-2
             .news__container.mx-2
               = link_to news do
                 h3.news__title = news.title
