--- a/app/views/pages/index/_partner.html.slim
+++ b/app/views/pages/index/_partner.html.slim
@@ -5,6 +5,6 @@ section#partners
     .partners
       .row
         - @partners_and_sponsors.each do |partner|
-          .col-md-2.col-sm-4.col-xs-12
-            .card.partner
+          .col-md-2.col-sm-6.col-xs-12.my-2
+            .card.partner.text-center
               = link_to image_tag(partner.logo_url(:v1)), partner.url, target: '_blank'
