--- a/app/views/news/_news.html.slim
+++ b/app/views/news/_news.html.slim
@@ -1,13 +1,13 @@
-article.news.mb-5.pb-5.with-border
+article.news.mb-5.pb-5.with-border.col-12
   .row
-    .col-md-6
+    .col-md-6.my-2
       .news__picture
         = image_tag news.thumbnail_url(:thumb)
         .news__date.text-center.py-2.px-3
           | #{news.created_at.day}
           br
           | #{news.created_at.strftime('%b')}
-    .col-md-6
+    .col-md-6.my-2
       .news__container.mx-2
         = link_to news do
           h3.news__title = news.title
