--- a/app/views/speakers/index.html.slim
+++ b/app/views/speakers/index.html.slim
@@ -10,7 +10,7 @@ section#speakers
     .row.flex-wrap
       - @speakers.each do |speaker|
         .align-self-stretch.col-lg-3.col-md-6.col-sm-6.col-xs-12.d-flex.mb-3
-          .card
+          .card.flex-grow-1
             = link_to speaker do
               = image_tag speaker.avatar_url(:v1), class: 'card-img-top'
             .card-body.text-center
