--- a/app/views/speakers/show.html.slim
+++ b/app/views/speakers/show.html.slim
@@ -5,7 +5,7 @@
 section#speaker
   .container.my-5.speaker
     .row
-      .col-md-4
+      .col-md-4.mb-4
         .speaker__picture = image_tag @speaker.avatar_url(:v1_large)
       .col-md-8.pl-4
         h3.speaker__name = @speaker.name
