--- a/app/views/sponsors/_item.html.slim
+++ b/app/views/sponsors/_item.html.slim
@@ -1,9 +1,9 @@
 .col-12
   article.sponsor.card.p-3.my-3
     .row
-      .sponsor__logo.text-center.col-4
+      .sponsor__logo.text-center.col-12.col-md-4.mb-2
         = link_to image_tag(item.logo_url(:v1)), item.url, target: '_blank'
-      .sponsor__container.col-8
+      .sponsor__container.col-12.col-md-8
         = link_to item.url, target: '_blank', class: 'sponsor__name' do
           h5 = item.name
         .sponsor__description = simple_format item.description
