--- a/app/views/agendas/show.html.slim
+++ b/app/views/agendas/show.html.slim
@@ -9,15 +9,18 @@
         .col-md-12
           iframe#JotFormIFrame src="#{current_site.cfp_form_url}" allowtransparency="true" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"
 - else
+  - column_width = 75 / @rooms.size
   section#agenda
-  - @days.each do |day|
-    .agenda.container.mt-5.mb-4.table-responsive
-        h2.agenda__label.text-center.mb-4 = day.name
-        table.table.table-striped.schedule
-          thead.thead-dark
-            tr
-              th = t('.time')
-              - @rooms.each do |room|
-                th.text-center = room.name
-          tbody
-            = render partial: 'time', collection: day.times, locals: { day: day }
+    - @days.each do |day|
+      .agenda.container.mt-5.mb-4
+          h2.agenda__label.text-center.mb-4
+            | #{day.label}
+            span.agenda__date = day.date
+          table.table.table-striped
+            thead.agenda__header.thead-dark
+              tr
+                th[scope="col" width="15%"]
+                - @rooms.each do |room|
+                  th.text-center[scope="col" width="#{column_width}%"] = room.name
+            tbody.agenda__body
+              = render partial: 'time', collection: day.times, locals: { day: day }
