--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -44,4 +44,5 @@ aside.main-sidebar
         = admin_sidebar_treeview t('.indie_space'), icon: 'gamepad' do
           = admin_sidebar_item t('.list'), admin_games_path, icon: 'list'
           = admin_sidebar_item t('.new'), new_admin_game_path, icon: 'plus'
+          = admin_sidebar_item t('.options'), edit_admin_indie_space_path, icon: 'gear'
         = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
